Fix bad contrast ratio

--- a/src/styl/App.styl
+++ b/src/styl/App.styl
@@ -52,6 +52,10 @@ nav
       cursor default
 
 .Home
+  h1
+    visibility hidden
+    position absolute
+
   .logo-and-timestamp
     display grid
     grid-template-columns 50% 50%
@@ -65,7 +69,8 @@ nav
       grid-column 1/3
       image-rendering pixelated
     span
-      color $palette-6
+      font-size $font-small
+      color $palette-2
       &:nth-child(3)
         text-align right
 
